# r-ticket

./: .env  .gitignore  Cargo.toml  package-lock.json  readme.md  web.config
client_src/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client_src/src/: App.vue  ajax.ts  main.ts  types.ts
client_src/src/components/: Breadcrumb.vue  Editablefield.vue  PropertyList.vue  Sidemenu.vue  TicketHeader.vue  Topbar.vue  Topmenu.vue
client_src/src/plugins/: clickablefield.ts
client_src/src/router/: index.ts
client_src/src/styles/: _variables.scss  main.scss
client_src/src/styles/fontawesome/scss/: _variables.scss
client_src/src/views/: DashboardView.vue  LoginView.vue  MainView.vue  NotFoundView.vue  TicketsDetailView.vue  TicketsListView.vue  TicketsView.vue
src/: application.rs  main.rs
src/application/: app.rs  tickets.rs
src/config/: globals.rs
src/db/: sql.rs
src/routes/: app.rs  authentication.rs  clients_routes.rs  customproperties_routes.rs  helpers.rs  mod.rs  tickets_routes.rs  users_routes.rs
src/security/: hasher.rs
src/store/: clients.rs  customproperties.rs  helpers.rs  mod.rs  store.rs  tickets.rs  users.rs
src/tickets_store/: tickets.rs
src/viewmodels/: models.rs
wwwroot/: index.html
wwwroot/assets/: AboutView-FPJjBEcM.js  index-oyfrbKTH.js  styles.css
